--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body {
     font-family: 'Poppins',sans-serif;
 }
-h2 {
+h1,h2,h3,h4 {
     font-weight: bold;
 }
 
@@ -44,6 +44,7 @@ hr {
     font-size: 16px;
     top: 0;
     left: 0;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 .navbar-light .navbar-nav .nav-link {
     padding: 0 20px;
@@ -215,3 +216,76 @@ hr {
     transform: translateY(0);
     opacity: 1;
 } 
+
+#banner{
+    background-image: url('img/banner/2.jpg');
+    width: 100%;
+    height: 60vh;
+    background-size: cover;
+    background-position: top 70px center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+#banner h4 {
+    color: #d8d8d8;
+}
+#banner h1 {
+    color: #fff;
+}
+
+#banner button {
+    background-color: #fb774b;
+}
+
+footer{
+    background-color: #222222;
+}
+footer h5 {
+    color: #d8d8d8;
+    font-weight: 700;
+    font-size: 1.2rem;
+}
+
+footer li {
+    padding-bottom: 4px;
+}
+
+footer li a{
+    font-style: 0.8rem;
+    color: #999;
+}
+footer li a:hover{
+    color: #d8d8d8;
+}
+
+footer p{
+    color: white;
+    font-style: 0.8rem;
+}
+footer h6{
+    color: #999;
+    font-style: 1.2rem;
+}
+
+footer .copyright a{
+    color: #000;
+    width: 38px;
+    height: 38px;
+    background-color: #fff;
+    display: inline-block;
+    text-align: center;
+    line-height: 38px;
+    border-radius: 50%;
+    transition: 0.3s ease;
+    margin: 0 5px;
+}
+
+footer .copyright a:hover {
+    color: #fff;
+    background-color: #fb774b;
+}
